# api-python-knative

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: workflow.yaml
app/: _environment_variables.py  _utils.py  main.py
app/routers/: sample.py
tests/: test_client.py  test_healthz.py  test_sample.py
